[package]
name = "anim-bntx-player"
version = "0.1.0"
authors = []
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.2.0"
binrw = "0.10.0"
once_cell = "1.12.0"
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
walkdir = "2.3.2"
ruzstd = "0.3.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
